# OrderFlow

./: docker-compose.yml
auth-service/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
auth-service/app/: main.py
auth-service/app/common/: auth_scheme.py  dependencies.py  dto.py  enums.py  exceptions.py
auth-service/app/core/: config.py  logger.py
auth-service/app/integrations/: database.py
auth-service/app/models/: refresh_tokens.py  users.py
auth-service/app/schemas/: command.py  fetch.py  request.py  response.py  result.py
auth-service/app/services/: authentication.py  exceptions.py  user.py
auth-service/app/setup/: fastapi_app.py  middleware.py
auth-service/migrations/: env.py
auth-service/migrations/versions/: 7a3ffbdd9453_initial.py
orchestrator/: Dockerfile  entrypoint.sh  pyproject.toml
orchestrator/app/: main.py
orchestrator/app/common/: enums.py
orchestrator/app/consumer/: dlq_reader.py  runner.py
orchestrator/app/core/: config.py  logger.py
orchestrator/app/integrations/: database.py  kafka_producer.py
orchestrator/app/models/: __init__.py  events.py  processed_event.py  saga_state.py
orchestrator/app/saga/: handlers.py  orchestrator.py  publisher.py  retry_worker.py
orchestrator/migrations/: env.py
orchestrator/migrations/versions/: e341df33cace_initial.py
order-service/: Dockerfile  entrypoint.sh  pyproject.toml
order-service/app/: main.py
order-service/app/common/: enums.py  exceptions.py
order-service/app/consumer/: runner.py
order-service/app/core/: config.py  exceptions.py  security.py
order-service/app/integrations/: cache.py  database.py  kafka.py  redis_client.py  rls_context.py
order-service/app/models/: orders.py
order-service/migrations/: env.py
(+40 files in other folders)
