[project]
name = "auth-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asgi-correlation-id>=4.3.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.0",
    "greenlet>=3.4.0",
    "mypy>=1.20.1",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.13.2",
    "python-jose[cryptography]>=3.5.0",
    "ruff>=0.15.11",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "uvicorn>=0.45.0",
]
