[project]
name = "orchestrator"
version = "0.1.0"
description = "Orchestrator-based Saga service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiokafka>=0.13.0",
    "alembic>=1.14.0",
    "asyncpg>=0.31.0",
    "greenlet>=3.4.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "ruff>=0.15.12",
    "sqlalchemy>=2.0.0",
    "structlog>=25.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = []

