[project]
name = "order-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiokafka>=0.13.0",
    "alembic>=1.18.4",
    "asgi-correlation-id>=4.3.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.0",
    "greenlet>=3.4.0",
    "pydantic-settings>=2.14.0",
    "python-jose>=3.5.0",
    "redis[asyncio]>=5.0.0",
    "ruff>=0.15.11",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "uvicorn>=0.45.0",
]
